--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-<titel>opfer80</title>
+<title>opfer80</title>
   </head>
   <body>
 <h1>Hello, Code School!</h1>
